scss/dulcet/_global.scss
/* COLORS */

$dul-headers:         #001A57;
$dul-links:           #0062A0;
$dul-masthead:        #053482;

/* TYPOGRAPHY */

.page-header h1 {
  font-weight: 500;
}

.x-large {
  font-size: 130%;
}



.hide-title #page-header h1#page-title, .hide-title #page-header .page-header  {
  display: none;
}

.feature-box-content img {
  max-width: 100%;
  height: auto;
}


img.rl-logo {
  background: #053482;
}


/* No Gutter (applies to all child divs) */
.no-gutter > [class*='col-'] {
  padding-right:0;
  padding-left:0;
}

/* No Padding (apply to individual divs) */
.no-padding-left {
  padding-left: 0 !important;
}

.no-padding-right {
  padding-right: 0 !important;
}

.no-padding-both {
  padding-left: 0 !important;
  padding-right: 0 !important;
}



/* Flex Coulmns */
.row-flex,
.row-flex > div[class*='col-'] {

}


.row-flex-wrap {
	-webkit-flex-flow: row wrap;
  align-content: flex-start;
  flex:0;
}

.row-flex > div[class*='col-'],
.container-flex > div[class*='col-'] {
	 /*margin:-.2px;*/ /* hack adjust for wrapping */
}

.container-flex > div[class*='col-'] div,
.row-flex > div[class*='col-'] div {
	width:100%;
}


.flex-col {
  display: flex;
  display: -webkit-flex;
  flex: 1 100%;
	flex-flow: column nowrap;
}

.flex-grow {
	display: flex;
  -webkit-flex: 2;
  flex: 2;
}



/* Vertical Tabs */
@include breakpoint(md) {

  /* bootstrap vertical tabs // http://dbtek.github.io/bootstrap-vertical-tabs/ */
  .tabs-left, .tabs-right {
    border-bottom: none;
    /*padding-top: 2px;*/
  }
  .tabs-left {
    /*border-right: 1px solid #ddd;*/
  }
  .tabs-right {
    border-left: 1px solid #ddd;
  }
  .tabs-left>li, .tabs-right>li {
    float: none;
    /*margin-bottom: 2px;*/
  }
  .tabs-left>li {
    margin-right: -1px;
  }
  .tabs-right>li {
    margin-left: -1px;
  }
  .tabs-left>li.active>a,
  .tabs-left>li.active>a:hover,
  .tabs-left>li.active>a:focus {
    border-bottom-color: #ddd;
    border-right-color: transparent;
  }

  .tabs-right>li.active>a,
  .tabs-right>li.active>a:hover,
  .tabs-right>li.active>a:focus {
    border-bottom: 1px solid #ddd;
    border-left-color: transparent;
  }
  .tabs-left>li>a {
    /*border-radius: 4px 0 0 4px;*/
    margin-right: 0;
    display:block;
  }
  .tabs-right>li>a {
    /*border-radius: 0 4px 4px 0;*/
    margin-right: 0;
  }

}



/* FOOTER STYLES */

#footer-dulcet div,
#footer-dulcet .list-unstyled li {
  line-height: 1.2;
  font-size: 99%;
}

#footer-dulcet div a,
#footer-dulcet .list-unstyled li a {
  line-height: 1.4;
  padding-bottom: .25em;
  display: inline-block;
  font-size: 99%;
}

#footer-dulcet h4 {
  border-bottom: 1px dotted #aaa;
  padding-bottom: 0;
  margin-bottom: .25em;
  font-weight: 400;
}

#footer-dulcet .newsletter-signup {
  margin-bottom: 1.5em;
}

#footer-dulcet .social-media-icons {
  margin-top: 1em !important;
  margin-bottom: .35em !important;
}

#footer-dulcet .col-md-1 img {
  padding-left: 5px;
}


/* MISC STYLES */

iframe {
  border: none;
}

.img-polaroid {
  padding: 4px;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,0.2);
  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
}

.view-content .item-list ul li {
 width: 100% !important;
}

.easy-breadcrumb {
  font-size: .95em;
  letter-spacing: .01em;
}

.easy-breadcrumb .easy-breadcrumb_segment-separator {
  padding: 0 2px 0 2px;
}

#duke-logo img {
  width: 100%;
}

.striped-back {
  padding: 15px;
  background: url('/sites/all/themes/dulcet/assets/images/striped-grey.png') repeat left top;
}

.page-about-directory-staff .staff-profile .btn {
  color: #fff !important;
  background-color: #053482 !important;
  border-color: #053482 !important;
  padding: 10px 18px !important;
}

.page-about-directory-staff .staff-profile .btn:hover {
  color: #fff !important;
  background-color: #032051 !important;
  border-color: #031c47 !important;
}

/* directory pages */

.page-about-directory .table-responsive {
  clear: both;
  margin-top: 1em;
}

.page-about-directory .table-responsive tr.even td:nth-of-type(2) {
  white-space: nowrap;
}

.page-about-directory .dul-staff-search-box,
.page-about-directory .dul-staff-search-box .form-item,
.page-about-directory .dul-staff-search-box .input-group {
  width: 100%;
}

.page-about-directory .dul-staff-search-box div:nth-of-type(1) {
  padding: 15px;
  background: url(/sites/all/themes/dulcet/assets/images/striped-grey.png) repeat left top;
}

@include breakpoint(md) {
  .page-about-directory .dul-staff-search-box {
    max-width: 35%;
  }

  .dul-staff-search-box .form-item {
    width: auto !important;
  }
}

/* Places to Study */

.studyrooms {
	column-count: 1;
	column-gap: 15px;
	column-fill: auto;
	-webkit-column-count: 1;
	-webkit-column-gap: 10px;
	-webkit-column-fill: auto;
	-moz-column-count: 1;
	clear: both;
}

.studyrooms .exhibit-bookmarkWidget-popup {
  display: none !important;
}

@include breakpoint(sm) {

  .studyrooms {
  	column-count: 2;
  	column-gap: 15px;
  	column-fill: auto;
  	-webkit-column-count: 2;
  	-webkit-column-gap: 10px;
  	-webkit-column-fill: auto;
  	-moz-column-count: 2;
  	clear: both;
  }

  .page-node-436 .exhibit-facet {
    width: 47%;
    float: left;
    margin: 1.5%;
  }

}

@include breakpoint(md) {

  .studyrooms {
  	column-count: 3;
  	column-gap: 15px;
  	column-fill: auto;
  	-webkit-column-count: 3;
  	-webkit-column-gap: 10px;
  	-webkit-column-fill: auto;
  	-moz-column-count: 3;
  	clear: both;
  }

}

/* Subject Specialists */

.subject-specialists .person .image {
  float: left;
  margin-right: 20px;
  max-width: 150px;
}

.subject-specialists .info {
  float: left;
  width: 75%;
  margin-right: 0;
  border-right: none;
  padding-right: 0;
}

.subject-specialists .expertise {
  clear: left;
  float: left;
  margin-top: 10px;
  width: 100%;
}

.subject-specialists .expertise p {
  color: #666;
  font-style: italic;
}

@include breakpoint(sm) {

  .subject-specialists .person .image {
    margin-right:4%;
    width: 12%;
  }

  .subject-specialists .info {
    width: 30%;
    margin-top: 2%;
    margin-right: 30px;
    border-right: 1px dotted #ddd;
    padding-right: 30px;
  }

  .subject-specialists .expertise {
    margin-top: 2%;
    clear: none;
    width: 43%;
  }

  .subject-specialists .expertise p {
    font-style: normal;
  }

}

@include breakpoint(md) {
  .subject-specialists .person .image {
    margin-right:3%;
    width: 12%;
  }
}

/* Jobs Page */

.view-jobs-librarian .views-field-title,
.view-jobs-exempt .views-field-title,
.view-jobs-non-exempt .views-field-title,
.view-jobs-intern .views-field-title {
  display: inline;
}

.page-about-jobs .sidebar-box-content li {
  line-height: inherit;
}

